--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "13.0.5",
     "next-auth": "^4.17.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "usehooks-ts": "2.6.0"
   },
   "devDependencies": {
     "@types/node": "18.11.9",
